--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -48,9 +48,7 @@ jobs:
 
       - name: Install Dependencies
         run: pip install dependencies
-        
-      - name: Build Project
-        run: pip run
 
-      - name: Run Unit Tests
-        run: npm test
+      - name: Test with pytest
+        run: |
+          pytest
