--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-# This is a basic workflow to help you get started with Actions
+# This is a workflow for python-project
 
 name: CI
 
@@ -7,8 +7,9 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
- 
-  # Allows you to run this workflow manually from the Actions tab
+  pull_request: 
+    types: [ opened, synchronize ]
+    branches: [ "main" ]
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -22,7 +23,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
+      
       - name: Set up Python 3.10
         uses: actions/setup-python@v3
         with:
@@ -33,7 +34,5 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Test with pytest
-        run: pytest
 
      
